--- a/_data/fr/navigation.yml
+++ b/_data/fr/navigation.yml
@@ -1,16 +1,16 @@
 # Links listed below will be included in your site's navbar (navigation at the top)
 
-- text: About
-  href: /about
+- text: About fr
+  href: /fr/about
 - text: Explore
   menu: 
-  - text: Occurrences
-    href: /occurrence/search
+  - text: Occurrences fr
+    href: /fr/occurrence/search
   - text: Datasets
     href: /dataset/search
   - text: Publishers
     href: /publisher/search
   - text: Literature
     href: /literature/search
-- text: News
-  href: /news
+- text: News fr
+  href: /fr/news
