--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you: 
+# If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 # You should also look at https://hp-theme.gbif-staging.org/documentation-intro for options
@@ -20,15 +20,15 @@
 # in the templates via {{ site.myvariable }}.
 
 title: GBIF.be # the title of your site should go here
-email: your-email@example.com
+email: gbif@biodiversity.be
 description: >- # this means to ignore newlines (until baseurl:)
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gbif-be.hp.gbif.org/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: yourname # if you have an account you want to link to. Else comment this line out
-github_username:  yourname # if you have an account you want to link to. Else comment this line out
+twitter_username: Biodiversity_be # if you have an account you want to link to. Else comment this line out
+github_username: andrejjh # if you have an account you want to link to. Else comment this line out
 
 # Build settings
 theme: minima
@@ -40,26 +40,26 @@ remote_theme: gbif/jekyll-hp-base-theme
 
 # For use by the 'standardPrivacy' layout
 privacy:
-  name: Your organisation name
-  domain: your-domain.org
-  contactEmail: info@your-domain.org
-  helpdeskEmail: helpdesk@your-domain.org
+  name: Belgian Biodiversity Platform
+  domain: biodiversity.be
+  contactEmail: contact@biodiversity.be
+  helpdeskEmail: contact@biodiversity.be
 
 algae:
   rootLang: en
   # latestPostLimit: 2
   # logo: /assets/images/fungi.svg  # Logo in navbar, will be displayed with 28px height
   # logoAndTitle: false           # include the title next to the logo
-  archive_permalink: /news/       # Permalink of page using archive.html layout, required when using post categories
+  archive_permalink: /news/ # Permalink of page using archive.html layout, required when using post categories
   style:
     # square: false               # Should corners be square or rounded
     colors:
-      primary: "#fa5e97"          # Primary color of your brand. Use HEX code. Used for buttons and links
-      # links: "#fa5e97"          # What color should links have. Use a HEX code. DEfault is primary color. 
-    coloredHeadlineLinks: false   # If a headline is a link, then use the link color. Default is true. 
-  navbar:                         # RELATED TO NAVIGATION BAR
-    # brandBackground: yellow     # Define a custom background for the logo/title in the top navigation bar
-    # color: "tomato"             # What color should the navbar be?
+      primary: "#fa5e97" # Primary color of your brand. Use HEX code. Used for buttons and links
+      # links: "#fa5e97"          # What color should links have. Use a HEX code. DEfault is primary color.
+    coloredHeadlineLinks: false # If a headline is a link, then use the link color. Default is true.
+  navbar: # RELATED TO NAVIGATION BAR
+    brandBackground: gray # Define a custom background for the logo/title in the top navigation bar
+    color: "tomato" # What color should the navbar be?
     # hasWhiteText: true          # Should the text color be white?
     # floating: true
 
@@ -98,7 +98,7 @@ defaults:
       path: "_posts" # an empty string here means all files in the project
     values:
       layout: "post"
-      permalink: "/post/:year/:slug/"   # Use /post/yyyy/{filename}/ as permalink for all posts
+      permalink: "/post/:year/:slug/" # Use /post/yyyy/{filename}/ as permalink for all posts
 
   - scope:
       path: "fr/"
@@ -110,3 +110,14 @@ defaults:
       layout: "post"
       permalink: "/fr/post/:year/:slug/"
       lang: fr
+
+  - scope:
+      path: "nl/"
+    values:
+      lang: nl
+  - scope:
+      path: "_posts/nl"
+    values:
+      layout: "post"
+      permalink: "/nl/post/:year/:slug/"
+      lang: nl
