--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -5,15 +5,17 @@
 columns:
   - name: Partners
     links:
-    - text: Name of project partner 1
-      href: http://example.com
-    - text: Name of project partner 2
-      href: http://example.com
+      - text: Belgian Science Policy
+        href: http://www.belspo.be
+      - text: Natural Sciences
+        href: https://www.naturalsciences.be
+      - text: Research Institute Nature and Forests
+        href: https://www.inbo.be
 
   - name: Code
     description: | # Can be Markdown
       This project is open source. See `_data/footer.yml` to customize the footer.
-  
+
   - name: Contact
     description: | # Can be Markdown
       Social icons links defined in `_config.yml`
@@ -32,8 +34,6 @@ columns:
   #  - text: link title 2
   #    href: http://example2.com
   #  connectIcons: true # optional - show social icons (defined in _config.yml)
-
-
 # Small print license statement to add at the bottom of the footer. Can be Markdown
 # Will be prefixed by "© {{ site.author }}" if defined in _config.yml
 # Will be postfixed by "Powered by GBIF"
