Preparing 4 languages support: en(default), de, fr, nl

--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,8 @@
 title: GBIF.be # the title of your site should go here
 email: gbif@biodiversity.be
 description: >- # this means to ignore newlines (until baseurl:)
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This Hosted Portal of the Belgian Biodiversity Platform let you explore the Open Biodiversity Data shared via the GBIF network.
+  Occurrences records come mostly from Belgian Institutions, Public authorities, Scientists and Citizens, but also from data rapatriated from abroad.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gbif-be.hp.gbif.org/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Biodiversity_be # if you have an account you want to link to. Else comment this line out
@@ -52,14 +51,14 @@ algae:
   # logoAndTitle: false           # include the title next to the logo
   archive_permalink: /news/ # Permalink of page using archive.html layout, required when using post categories
   style:
-    # square: false               # Should corners be square or rounded
+    square: false # Should corners be square or rounded
     colors:
-      primary: "#fa5e97" # Primary color of your brand. Use HEX code. Used for buttons and links
-      # links: "#fa5e97"          # What color should links have. Use a HEX code. DEfault is primary color.
+      primary: darkgreen # Primary color of your brand. Use HEX code. Used for buttons and links
+    #      links: blue # What color should links have. Use a HEX code. DEfault is primary color.
     coloredHeadlineLinks: false # If a headline is a link, then use the link color. Default is true.
   navbar: # RELATED TO NAVIGATION BAR
-    brandBackground: gray # Define a custom background for the logo/title in the top navigation bar
-    color: "tomato" # What color should the navbar be?
+    brandBackground: white # Define a custom background for the logo/title in the top navigation bar
+    color: white # What color should the navbar be?
     # hasWhiteText: true          # Should the text color be white?
     # floating: true
 
