--- a/_data/languages.yml
+++ b/_data/languages.yml
@@ -13,3 +13,9 @@ nl:
   icon: # optional
   storiesLocale: nl
   widgetLocale: nl
+
+de:
+  label: German
+  icon: # optional
+  storiesLocale: de
+  widgetLocale: de
