--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,9 @@ privacy:
 algae:
   rootLang: en
   # latestPostLimit: 2
-  # logo: /assets/images/fungi.svg  # Logo in navbar, will be displayed with 28px height
-  # logoAndTitle: false           # include the title next to the logo
+  logo: /assets/images/logos/logoBBPf.png
+  # Logo in navbar, will be displayed with 28px height
+  logoAndTitle: true # include the title next to the logo
   archive_permalink: /news/ # Permalink of page using archive.html layout, required when using post categories
   style:
     square: false # Should corners be square or rounded
@@ -56,11 +57,11 @@ algae:
       primary: darkgreen # Primary color of your brand. Use HEX code. Used for buttons and links
     #      links: blue # What color should links have. Use a HEX code. DEfault is primary color.
     coloredHeadlineLinks: false # If a headline is a link, then use the link color. Default is true.
-  navbar: # RELATED TO NAVIGATION BAR
-    brandBackground: white # Define a custom background for the logo/title in the top navigation bar
-    color: white # What color should the navbar be?
-    # hasWhiteText: true          # Should the text color be white?
-    # floating: true
+    navbar: # RELATED TO NAVIGATION BAR
+      brandBackground: white # Define a custom background for the logo/title in the top navigation bar
+      color: white # What color should the navbar be?
+      # hasWhiteText: true # Should the text color be white?
+      # floating: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -120,3 +121,14 @@ defaults:
       layout: "post"
       permalink: "/nl/post/:year/:slug/"
       lang: nl
+
+  - scope:
+      path: "de/"
+    values:
+      lang: de
+  - scope:
+      path: "_posts/de"
+    values:
+      layout: "post"
+      permalink: "/de/post/:year/:slug/"
+      lang: de
