--- a/_data/fr/navigation.yml
+++ b/_data/fr/navigation.yml
@@ -20,5 +20,5 @@
       href: /publisher/search
     - text: Littérature
       href: /literature/search
-- text: Nouvelles
+- text: Actualités
   href: /news
