--- a/_data/examples.yml
+++ b/_data/examples.yml
@@ -3,7 +3,7 @@ stories:
   title: Global News
   # Description (Optional)
   description: |
-    (from GBIF.org news feed)
+    from GBIF Secretariat
   # Filters
   # Use these options to tailor the content displayed in your block.
   filters:
@@ -15,73 +15,113 @@ stories:
     # locale:
     #   - fr
 
-stats:
-  klass: contentTypesStat
-  # title: "type: stats"
-  # description: | # required
-  # See [`_data/compose/examples.yml`](https://github.com/gbif/jekyll-theme-algae/blob/master/_data/compose/examples.yml#L72) for the content structure.
-  features:
-    - title: <span data-ajax-url="https://api.gbif.org/v1/grscicoll/institution?displayOnNHCPortal=true">642</span>
-      description: Institutions
-      background: /assets/images/placeholders/institutions_small.jpg
-      href: /institution/search
-    - title: <span data-ajax-url="https://api.gbif.org/v1/grscicoll/collection?&displayOnNHCPortal=true">45</span>
-      description: Collections
-      background: /assets/images/placeholders/collections_small.jpg
-      href: /collection/search
-    - title: "54 million"
-      description: Digitized specimens
-      background: /assets/images/placeholders/specimen.png
-
-couldBeAnyName:
-  title: Virginis socerque
-  description: |
-    Forth beginning form dry thing. Form seed void likeness darkness light. Can’t created third upon spirit fruitful hath likeness their. Replenish saw female night they’re you blessed all greater cattle, grass god fifth you’re. Above wherein replenish face multiply male every. Own hath lights under creeping.
-  features:
-    - title: Abundantly light years # required
-      description: | # required
-        Also, in [for from](/about) winged doesn’t sea creepeth brought be deep abundantly light green they’re living green years.
-      href: /about
-      # img required
-      background: /assets/images/placeholders/blocks2.png
-      imageLicense: None for this image, but normally you would provide one here
-      # categories: [drawings] # optional
-    - title: Fly moving land # required
-      description: | # required
-        Also, in [for from](/about) winged doesn’t sea creepeth brought be deep abundantly light green they’re living green years.
-      href: /about
-      background: /assets/images/placeholders/blocks2.png
-      imageLicense: None for this image, but normally you would provide one here
-    - title: Fruitful replenish # required
-      description: | # required
-        Also, in [for from](/about) winged doesn’t sea creepeth brought be deep abundantly light green they’re living green years.
-      href: /about
-      background: /assets/images/placeholders/blocks2.png
-      imageLicense: None for this image, but normally you would provide one here
-    - title: Land man dry # required
-      description: | # required
-        Also, in [for from](/about) winged doesn’t sea creepeth brought be deep abundantly light green they’re living green years.
-      href: /about
-      background: /assets/images/placeholders/blocks2.png
-      imageLicense: None for this image, but normally you would provide one here
-    - title: Abundantly light years # required
-      description: | # required
-        Also, in [for from](/about) winged doesn’t sea creepeth brought be deep abundantly light green they’re living green years.
-      href: /about
-      background: /assets/images/placeholders/blocks2.png
-      imageLicense: None for this image, but normally you would provide one here
-
-herbariumImageExample:
+support:
   reverse: false
-  title: "Likeness darkness light"
+  title: "Supporting GBIF"
   description: | # required
-    Forth beginning form dry thing. Form seed void likeness darkness light. Can't created third upon spirit fruitful hath likeness their. Replenish saw female night they're you blessed all greater cattle, grass god fifth you're. Above wherein replenish face multiply male every. Own hath lights under creeping.
+    Belgium was an early adopter of GBIF and remained one of the most active Voting Participant since 2001. Thanks to our continuous efforts in data mobilization, publication and use, we delivered great results compared to the size of our country.
   # img required
-  background: https://data.nhm.ac.uk/media/d9850154-9e45-426c-8712-d030da3c1c00
+  background: /assets/images/placeholders/mapBE2024-05-15.png
   imageLicense: |
-    *Polyptychodon* Owen, 1841 collected in United Kingdom of Great Britain and Northern Ireland. [See full record](/specimen/search?entity=1057252794&view=TABLE) (licensed under http://creativecommons.org/licenses/by/4.0/)
+    GBIF.org
   href: /about
   cta:
-    - text: Download report
-      href: http://example.com
+    - text: Download activity report
+      href: https://www.gbif.org/sites/default/files/gbif_analytics/country/BE/GBIF_CountryReport_BE.pdf
       isPrimary: true
+
+topics:
+  title: Topical issues
+  description: |
+    Explore the topical issues we are currently focusing on
+  features:
+    - title: Biodiversity & Climate Change # required
+      description: | # required
+        We are currently assessing the need for science-policy interfacing tools/approaches/capacity in the topical area of Biodiversity and Climate Change.
+      href: https://www.biodiversity.be/5472
+      # img required
+      background: /assets/images/placeholders/topic1.png
+      imageLicense: None for this image, but normally you would provide one here
+    - title: Invasive Alien Species # required
+      description: | # required
+        We work on Invasive Alien Species (IAS) by facilitating science-policy processes on invasive alien species
+      href: https://www.biodiversity.be/5981
+      background: /assets/images/placeholders/topic2.png
+      imageLicense: None for this image, but normally you would provide one here
+    - title: Nature & Society # required
+      description: | # required
+        The BElgian Ecosystems and Society community (BEES) is a growing and active informal network of Belgian ecosystem services experts.
+      href: https://www.biodiversity.be/5980
+      background: /assets/images/placeholders/topic3.png
+      imageLicense: None for this image, but normally you would provide one here
+    - title: One Health # required
+      description: | # required
+        The community groups experts from a diversity of fields: natural and social scientists, policy-makers, practitioners and other stakeholders. The structural support for the topical issue on Biodiversity and One Health was established as a follow-up of the 2011 Belgian Biodiversity & Health conference organised by the Belgian Biodiversity Platform.
+      href: https://www.biodiversity.be/3643
+      background: /assets/images/placeholders/topic4.png
+      imageLicense: None for this image, but normally you would provide one here
+    - title: Nature based solutions # required
+      description: | # required
+        The Belgian Biodiversity Platform is the Belgian IUCN Focal Point. We work on strengthening conservation-related actions in Belgium and we promote success stories of Belgian IUCN members.
+      href: https://www.biodiversity.be/3079
+      background: /assets/images/placeholders/topic5.png
+      imageLicense: None for this image, but normally you would provide one here
+    - title: Biodiversity Informatics # required
+      description: | # required
+        Through our activities of biodiversity data mobilisation, we encourage researchers to make use of Biodiversity Informatics tools and standards.
+      href: https://www.biodiversity.be/1767
+      background: /assets/images/placeholders/topic6.png
+      imageLicense: None for this image, but normally you would provide one here
+staff:
+  title: Node staff
+  description: |
+  features:
+    - title: Andre Heughebaert # required
+      description: | # required
+        Senior Software engineer and expert in Biodiversity Informatics, André manages the Platform's IT team. He coordinates data management, websites and web based services. André is our representative to Global Biodiversity Information Facility (GBIF) Governing Board taking part in the global-level decision making. He has a particular interest in Biodiversity Data Exchange Standards, Data Visualisation, Cleaning and Publication Tools.<br>Node manager
+      href: /team
+      categories: [Node manager]
+      background: /assets/images/staff/andre.png
+      imageLicense: None for this image, but normally you would provide one here
+    - title: Julien Cigar # required
+      description: | # required
+        IT specialist, Julien is the Belgian Biodiversity Platform system administrator. He has particular interest in databases, Python and the FreeBSD operating system.
+      href: /team
+      categories: [System Adminstrator]
+      background: /assets/images/staff/julien.png
+      imageLicense: None for this image, but normally you would provide one here
+    - title: Dimitri Brossens # required
+      description: | # required
+        Dimitri is a biologist interested in biodiversity informatics and is the GBIF (Global Biodiversity Information Facility) node manager for Belgium, he animates the network and is actively involved in data mobilisation and publication in Belgium. Dimitri has a particular interest in data standardisation, Darwin Core, invasive species, palaeontology, terrestrial and freshwater biodiversity. He advocates Open Science in the Research cycle and looks for practical usage of open data. He loves to chat with scientists and helps them to publish their data. His ultimate goal is to get Belgium on the global map of biodiversity. Dimitri has is office in the Research Institute for Nature and Forest.
+      href: /team
+      categories: [Open Data Expert]
+      background: /assets/images/staff/dimi.png
+      imageLicense: None for this image, but normally you would provide one here
+    - title: Maxime Coppremanne # required
+      description: | # required
+        Maxime is a biologist involved in the mobilization of biodiversity data on the Global Biodiversity Information Facility (GBIF) portal. Based at the Départment d'Etude du Milieu Naturel et Agricole (SPW-DEMNA), he advocates the use of Open Data in Wallonia and support anyhow is willing to join the open side of the science. His  particular interests are biodiversity informatics, data management, marine life, invasive species, species distribution models and Open Science.
+      href: /team
+      categories: [Open Data Expert]
+      background: /assets/images/staff/max.png
+      imageLicense: None for this image, but normally you would provide one here
+    - title: Stijn Cooleman # required
+      description: | # required
+        Stijn is a biologist with interdisciplinary skills in data management. He is involved in open data activities at the platform. By focusing on biodiversity informatic standards and data mapping, he supports to mobilise natural history knowledge from collections to web portals of the Global Biodiversity Information Facility (GBIF) and European Infrastructures. He has a particular interest in avian ecology, taxonomy, species distribution and ecosystem services.
+      href: /team
+      categories: [Open Data Expert]
+      background: /assets/images/staff/stijn.png
+      imageLicense: None for this image, but normally you would provide one here
+    - title: Sebastien Ronveaux # required
+      description: | # required
+        Sébastien is a computer scientist specialised in computer imaging and computer vision. Hired within the context of the RiparIAS project, he's currently developing the decision support tool which is a key deliverable of this project. He has particular interests in programming languages and paradigms, imaging and optimisation.
+      href: /team
+      categories: [Developer]
+      background: /assets/images/staff/sebastien.png
+      imageLicense: None for this image, but normally you would provide one here
+
+    - title: Francois Malherbe # required
+      description: | # required
+        François has helped update our data portal (https://data.biodiversity.be) and is working on the database export of the Belgian Gracillariidae database to enrich the Catalogue of Life collection. He has particular interest in the open source, inclusive social projects and zero waste.            href: /team
+      categories: [Developer]
+      background: /assets/images/staff/francois.png
+      imageLicense: None for this image, but normally you would provide one here
