--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,8 @@
       href: /services
     - text: Team
       href: /team
+    - text: Topical issues
+      href: /topics
     - text: FAQs
       href: /faqs
 
