--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -5,8 +5,7 @@
 columns:
   - name: Contact us
     description: | # Can be Markdown
-      The [Belgian Biodiversity Platform](https://www.biodiversity.be) customized this [hosted portal](https://www.gbif.org/hosted-portals) as part of our contribution to [GBIF](https://www.gbif.org)
-      ![BBPf](/assets/images/logos/logoBBPf.png){:height="60px" width="120px"}
+      [contact@biodiversity.be](mailto:contact@biodiversity.be)![BBPf](/assets/images/logos/logoBBPf.png){:height="60px" width="120px"}
 
     connectIcons: true
 
